--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "babel-loader": "^8.0.4",
-    "bootstrap": "^3.3.7",
+    "bootstrap": ">=4.1.2",
     "css-loader": "^1.0.0",
-    "file-loader": "^2.0.0",
+    "extract-loader": "^3.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.4",
@@ -25,5 +25,8 @@
     "webpack": "^4.22.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
+  },
+  "devDependencies": {
+    "file-loader": "^2.0.0"
   }
 }
